# craven_control

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: 4ch_relay_protocol_notes.md  N4AIA04_modbus_rtu_protocol.md  WDCU3003M_Micro_Ammeter_uA-3A.md  YK-DAQ1402-modbus-reg.avif  YK-DAQ1402-specs.avif  YK-DAQ1402-wiring.avif  YK-KTC1202-modbus-reg.avif  YK-KTC1202-specs.avif  YK-PVCCS0100-modbus-reg.avif  YK-PVCCS0100-specs.avif  craven-control-arch.graffle  inert-gas-map.graffle  pyro-sim-loop.graffle  quad_relay_notes.md
src/: lib.rs  main.rs
