[package]
name = "craven_control"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "configure"
path = "src/bin/configure.rs"

[[bin]]
name = "poll"
path = "src/bin/poll.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-serial = { version = "5.4"  }
tokio-modbus = "0.17.0"
chrono = "0.4.43"
# byteorder = "1.5"

